[gd_scene load_steps=3 format=3 uid="uid://dlbxwxwjl5yu"]

[ext_resource type="SpriteFrames" uid="uid://dpt5w44ffb88j" path="res://Base/Res/items.tres" id="1_cu88t"]
[ext_resource type="Script" uid="uid://bv1vxcoei2lry" path="res://Base/code/buildings/recipe_button.gd" id="1_vs7od"]

[node name="RecipeButton" type="Button"]
custom_minimum_size = Vector2(50, 50)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_vs7od")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="AnimatedSprite2D" parent="VBoxContainer"]
position = Vector2(25, 23)
sprite_frames = ExtResource("1_cu88t")
animation = &"icon"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
